# monitor_stills_process

./: .flaskenv  .gitignore  .pre-commit-config.yaml  generate_random.py  package-lock.json  package.json  pyproject.toml  webpack.config.js
src/js/: app.js  app.scss  data.js  index.js
src/monitor/: __init__.py  backgroundmonitor.py  example_data.json  generator.py  monitor.py  server.py
static/: index.html
tests/: test_monitor.py
