[tool.poetry]
name = "monitor_stills_process"
version = "0.1.0"
description = ""
authors = ["Nicholas Devenish <ndevenish@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
python-dotenv = "^0.14.0"

[tool.isort]
profile="black"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

